spade-tests/src/snapshots/spade_tests__parser__tuple_index_points_to_the_right_thing.snap
---
source: spade-tests/src/parser.rs
---
fn test(a: (bool,)) -> bool {
    a#0#0
}

error: Attempt to use tuple indexing on non-tuple
  ┌─ testinput:2:5
  │
1 │ fn test(a: (bool,)) -> bool {
  │            ------- Type bool inferred here
2 │     a#0#0
  │     ^^^-- Because this is a tuple index
  │     │   
  │     expected tuple, got bool


